--- a/FrontEnd/src/Components/Layout/Header/Header.css
+++ b/FrontEnd/src/Components/Layout/Header/Header.css
@@ -1,3 +1,20 @@
-.Header {
-	
+/* HEADING */
+.Header h1 {
+  font-family: tiki;
+  font-size: 3vw;
+  color: rgb(144, 192, 245);
+}
+
+@media (max-width: 768px) {
+  /* styles for smaller screens */
+  .Header h1 {
+    font-size: 10vw;
+  }
+}
+
+@media (max-width: 400px) {
+  /* styles for smaller screens */
+  .Header h1 {
+    margin-bottom: 3rem;
+  }
 }
