--- a/FrontEnd/src/Components/Pages/Vacations/Vacations.css
+++ b/FrontEnd/src/Components/Pages/Vacations/Vacations.css
@@ -1,3 +1,8 @@
 .Vacations {
-	
+  background-image: url("https://img.freepik.com/free-photo/travel-concept-with-landmarks_23-2149153256.jpg?w=2000&t=st=1681669666~exp=1681670266~hmac=7090eed43487a9444835f7813838376bffafbab56c535a43b84b2ccf470a5ddb");
+  height: 100%;
+}
+
+.Card {
+  margin: 1.5rem;
 }
