--- a/FrontEnd/src/Components/Layout/Footer/Footer.css
+++ b/FrontEnd/src/Components/Layout/Footer/Footer.css
@@ -1,4 +1,8 @@
 .Footer {
-  margin-top: 0.5vw;
   font-size: 1rem;
+  margin-bottom: 0.5rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
