--- a/FrontEnd/src/Components/Pages/Vacations/addVacationModal/addVacationModal.css
+++ b/FrontEnd/src/Components/Pages/Vacations/addVacationModal/addVacationModal.css
@@ -3,7 +3,7 @@
   font-weight: bold;
 }
 
-.container img {
+.preview {
   display: block;
   width: 80%;
   height: auto;
@@ -15,12 +15,4 @@
   position: relative;
   width: 100%;
   max-width: 400px;
-}
-
-.container .btn {
-  position: absolute;
-  top: 80%;
-  left: 60%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
 }
