--- a/FrontEnd/src/Components/Pages/Vacations/Vacations.css
+++ b/FrontEnd/src/Components/Pages/Vacations/Vacations.css
@@ -2,6 +2,7 @@
   background-image: url("../../../assets/images/travel.jpg");
   background-size: cover;
   height: 100vh;
+  overflow: scroll;
 }
 
 .Card {
