--- a/FrontEnd/src/Components/Layout/Main/Main.css
+++ b/FrontEnd/src/Components/Layout/Main/Main.css
@@ -1,5 +1,50 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Playfair+Display:wght@700&display=swap");
+
 .Main {
   background-image: url("../../../assets/images/travel.jpg");
   background-size: cover;
+  background-position: center;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  text-align: center;
+}
+
+.content-container {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 30px;
+  border-radius: 20px;
+  margin-top: 10vh;
+  max-width: 500px;
+  box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.25);
+  font-family: "Montserrat", sans-serif;
+}
+
+.content-container h1 {
+  color: #333;
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  font-family: "Playfair Display", serif;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  letter-spacing: 1.5px;
+}
+
+.content-container p {
+  color: #333;
+  font-size: 1.3em;
+  margin-bottom: 20px;
+  line-height: 1.6;
+}
+
+.content-container a {
+  color: #007bff;
+  text-decoration: none;
+  padding: 5px 0;
+  transition: transform 0.3s ease;
+  display: inline-block;
+}
+
+.content-container a:hover {
+  transform: scale(1.1);
 }
