--- a/FrontEnd/src/Components/Layout/Logo/Logo.css
+++ b/FrontEnd/src/Components/Layout/Logo/Logo.css
@@ -12,16 +12,16 @@
   src: url("../../../assets/fonts/tiki.ttf") format("truetype");
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   /* styles for smaller screens */
   .Header h1 {
-    font-size: 10vw;
+    font-size: 5vw;
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 600px) {
   /* styles for smaller screens */
   .Header h1 {
-    margin-bottom: 3rem;
+    font-size: 1.5rem;
   }
 }
