--- a/FrontEnd/src/Components/Pages/Page404/Page404.css
+++ b/FrontEnd/src/Components/Pages/Page404/Page404.css
@@ -124,7 +124,7 @@ input {
   height: 4px;
   background-repeat: repeat-x;
   background-size: contain;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   opacity: 0.5;
